# PhD-Summer-Research

./: .gitignore
chap3_python/: README.md  pyproject.toml
chap3_python/cases/: README.md
chap3_python/cases/Brugge_Matlab_Python_Testing/: setup_ga.py  setup_ilhs.py
chap3_python/cases/Brugge_Matlab_Python_Testing/source/: baseinfo1_locidx.csv
chap3_python/cases/Brugge__o/: setup_ga.py
chap3_python/cases/Brugge_xt_o/: setup_ga.py  setup_ilhs.py
chap3_python/cases/Brugge_xt_o_ilhs/: plot_results.py  setup_ga.py  setup_ilhs.py
chap3_python/cases/Brugge_xto/: setup_ga.py
chap3_python/cases/Brugge_xto_ilhs/: readme.md  setup_ga.py  setup_ilhs.py
chap3_python/cases/channel_boundA_xt_ga/: setup_optimizer.py
chap3_python/cases/channel_boundA_xt_ilhs/: plot_results.py  setup_optimizer.py
chap3_python/cases/channel_boundA_xto_ga/: setup_optimizer.py  view_tempdata.py
chap3_python/cases/channel_boundA_xto_ilhs/: setup_optimizer.py
chap3_python/cases/channelmodel/: setup_ga.py
chap3_python/cases/channelmodel_original/: setup.py  setup_optimizer.py
chap3_python/chap3_ga/: __init__.py  case_setup.py  cli.py  config.py  encoding.py  ga.py  initial_solutions.py  lhs_initialization.py  objective.py  opt_cli.py  optimizer.py  plotting.py  restart.py  run_case.py  view_tempdata.py  writers.py
chap3_python/chap3_ilhs/: __init__.py  case_setup.py  ilhs.py  run_case.py
chap4_python/: README.md  pyproject.toml
chap4_python/chap4_opt/: __init__.py  cli.py  config.py  ga.py  local_search.py  matlab_io.py  objective.py  plotting.py  variables.py  writers.py
(+40 files in other folders)
